--- a/resources/views/partials/site/header.twig
+++ b/resources/views/partials/site/header.twig
@@ -37,5 +37,7 @@
 
     <!-- Font Awesome -->
     <link rel="stylesheet" href="{{ base_url() }}/css/all.css">
+    <link rel="stylesheet" href="{{ base_url() }}/css/font-awesome.css">
+
 </head>
 <body>
