--- a/resources/views/site/home.twig
+++ b/resources/views/site/home.twig
@@ -1,6 +1,6 @@
 {% extends "layouts/base_site.twig" %}
 
-{% block title %}Hcode Store{% endblock %}
+{% block title %}Hcode - Home{% endblock %}
 
 {% block content_site %}
 
