--- a/resources/views/admin/categories.twig
+++ b/resources/views/admin/categories.twig
@@ -2,24 +2,22 @@
 
 {% block content_admin %}
 
-<!-- Content Wrapper. Contains page content -->
-<div class="content-wrapper">
 <!-- Content Header (Page header) -->
 <section class="content-header">
   <h1>
     Lista de Categorias
   </h1>
-  <ol class="breadcrumb">
-    <li><a href="/admin"><i class="fa fa-dashboard"></i> Home</a></li>
-    <li class="active"><a href="/admin/categories">Categorias</a></li>
+  <ol class="breadcrumb" aria-label="breadcrumbs">
+    <li><a href="{{ base_url() }}/admin/main"><i class="fa fa-dashboard"></i> Home</a></li>
+    <li class="is-active"><a href="{{ base_url() }}/admin/categories" aria-current="page">Categorias</a></li>
   </ol>
 </section>
 
 <!-- Main content -->
 <section class="content">
 
-  <div class="row">
-  	<div class="col-md-12">
+  <div class="columns">
+  	<div class="column is-full">
   		<div class="box box-primary">
             
             <div class="box-header">
@@ -32,18 +30,18 @@
                   <tr>
                     <th style="width: 10px">#</th>
                     <th>Nome da Categoria</th>
-                    <th style="width: 140px">&nbsp;</th>
+                    <th style="width: 240px">&nbsp;</th>
                   </tr>
                 </thead>
                 <tbody>
                 {% for category in categories %}
                   <tr>
                     <td>{{ category.idcategory }}</td>
-                    <td style="width: 450px">{{ category.descategory }}</td>
+                    <td style="width: 470px">{{ category.descategory }}</td>
                     <td>
-                      <a href="/hcode-slim-3/public/admin/categories/products/{{ category.idcategory }}" class="btn btn-primary btn-xs"><i class="fa fa-edit"></i> Produtos</a>
-                      <a href="/hcode-slim-3/public/admin/category/update/{{ category.idcategory }}" class="btn btn-primary btn-xs"><i class="fa fa-edit"></i> Editar</a>
-                      <a href="/hcode-slim-3/public/admin/category/delete?id={{ category.idcategory }}" onclick="return confirm('Deseja realmente excluir este registro?')" class="btn btn-danger btn-xs"><i class="fa fa-trash"></i> Excluir</a>
+                      <a href="{{ base_url() }}/admin/categories/products/{{ category.idcategory }}" class="button is-success is-small"><i class="fa fa-plus mr-2"></i> Produtos</a>
+                      <a href="{{ base_url() }}/admin/category/update/{{ category.idcategory }}" class="button is-primary is-small"><i class="fa fa-edit mr-2"></i> Editar</a>
+                      <a href="{{ base_url() }}/admin/category/delete?id={{ category.idcategory }}" onclick="return confirm('Deseja realmente excluir este registro?')" class="button is-danger is-small"><i class="fa fa-trash mr-2"></i> Excluir</a>
                     </td>
                   </tr>
                 {% endfor %}
@@ -57,7 +55,5 @@
 
 </section>
 <!-- /.content -->
-</div>
-<!-- /.content-wrapper -->
 
 {% endblock %}
