--- a/resources/views/admin/products.twig
+++ b/resources/views/admin/products.twig
@@ -2,8 +2,6 @@
 
 {% block content_admin %}
 
-<!-- Content Wrapper. Contains page content -->
-<div class="content-wrapper">
 <!-- Content Header (Page header) -->
 <section class="content-header">
   <h1>
@@ -23,7 +21,7 @@
   		<div class="box box-primary">
             
             <div class="box-header">
-              <a href="{{ path_for('admin.product-create') }}" class="btn btn-success">Cadastrar Produto</a>
+              <a href="{{ path_for('admin.product-create') }}" class="button is-success is-normal mb-2">Cadastrar Produto</a>
             </div>
 
             <div class="box-body no-padding">
@@ -51,8 +49,8 @@
                     <td>{{ product.vllength }}</td>
                     <td>{{ product.vlweight }}</td>
                     <td>
-                      <a href="/hcode-slim-3/public/admin/product/update/{{ product.idproduct }}" class="btn btn-primary btn-xs"><i class="fa fa-edit"></i> Editar</a>
-                      <a href="/hcode-slim-3/public/admin/product/delete?id={{ product.idproduct }}" onclick="return confirm('Deseja realmente excluir este registro?')" class="btn btn-danger btn-xs"><i class="fa fa-trash"></i> Excluir</a>
+                      <a href="{{ base_url() }}/admin/product/update/{{ product.idproduct }}" class="button is-primary is-small mb-2"><i class="fa fa-edit mr-2"></i> Editar</a>
+                      <a href="{{ base_url() }}/admin/product/delete?id={{ product.idproduct }}" onclick="return confirm('Deseja realmente excluir este registro?')" class="button is-danger is-small"><i class="fa fa-trash mr-2"></i> Excluir</a>
                     </td>
                   </tr>
                 {% endfor %}
@@ -66,7 +64,5 @@
 
 </section>
 <!-- /.content -->
-</div>
-<!-- /.content-wrapper -->
 
 {% endblock %}
