--- a/resources/views/admin/users.twig
+++ b/resources/views/admin/users.twig
@@ -2,16 +2,16 @@
 
 {% block content_admin %}
 
-    <!-- Content Wrapper. Contains page content -->
-    <div class="content-wrapper">
+
+
         <!-- Content Header (Page header) -->
         <section class="content-header">
             <h1>
                 Lista de Usuários
             </h1>
-            <ol class="breadcrumb">
-                <li><a href="{{ path_for('admin.main') }}"><i class="fa fa-dashboard"></i> Home</a></li>
-                <li class="active"><a href="{{ path_for('admin.users') }}">Usuários</a></li>
+            <ol class="breadcrumb" aria-label="breadcrumbs">
+                <li><a href="{{ path_for('admin.home') }}"><i class="fa fa-dashboard"></i> Home</a></li>
+                <li class="is-active"><a href="{{ path_for('admin.users') }}" aria-current="page">Usuários</a></li>
             </ol>
         </section>
 
@@ -22,7 +22,7 @@
                     <div class="box box-primary">
 
                         <div class="box-header">
-                            <a href="{{ path_for('admin.user-create') }}" class="btn btn-success">Cadastrar Usuário</a>
+                            <a href="{{ path_for('admin.user-create') }}" class="button is-success is-normal mb-2">Cadastrar Usuário</a>
                         </div>
 
                         <div class="box-body no-padding">
@@ -30,11 +30,11 @@
                                 <thead>
                                 <tr>
                                     <th style="width: 10px">#</th>
-                                    <th>Nome</th>
-                                    <th>E-mail</th>
-                                    <th>Login</th>
-                                    <th style="width: 60px">Admin</th>
-                                    <th style="width: 140px">&nbsp;</th>
+                                    <th style="width: 180px">Nome</th>
+                                    <th style="width: 140px">E-mail</th>
+                                    <th style="width: 100px">Login</th>
+                                    <th style="width: 40px">Admin</th>
+                                    <th style="width: 160px">&nbsp;</th>
                                 </tr>
                                 </thead>
                                 <tbody>
@@ -46,11 +46,11 @@
                                         <td>{{ user_person.user.deslogin }}</td>
                                         <td>{% if user_person.user.inadmin == 1 %}Sim{% else %}Não{% endif %}</td>
                                         <td>
-                                            <a href="/hcode-slim-3/public/admin/user/update/{{ user_person.idperson }}"
-                                               class="btn btn-primary btn-xs"><i class="fa fa-edit"></i> Editar</a>
-                                            <a href="/hcode-slim-3/public/admin/user/delete?id={{ user_person.idperson }}"
+                                            <a href="{{ base_url() }}/admin/user/update/{{ user_person.idperson }}"
+                                               class="button is-primary is-small"><i class="fa fa-edit mr-2"></i> Editar</a>
+                                            <a href="{{ base_url() }}/admin/user/delete?id={{ user_person.idperson }}"
                                                onclick="return confirm('Deseja realmente excluir este registro?')"
-                                               class="btn btn-danger btn-xs"><i class="fa fa-trash"></i> Excluir</a>
+                                               class="button is-danger is-small"><i class="fa fa-trash mr-2"></i> Excluir</a>
                                         </td>
                                     </tr>
                                 {% endfor %}
@@ -64,7 +64,6 @@
             </div>
         </section>
         <!-- /.content -->
-    </div>
-    <!-- /.content-wrapper -->
+
 
 {% endblock %}
