--- a/resources/views/partials/site/navigation.twig
+++ b/resources/views/partials/site/navigation.twig
@@ -43,13 +43,13 @@
         <div class="row">
             <div class="col-sm-6">
                 <div class="logo">
-                    <h1><a href="#"><img src="{{ base_url() }}/images/logo.png" alt></a></h1>
+                    <h1><a href="{{ path_for('site.home') }}"><img src="{{ base_url() }}/images/logo.png" alt></a></h1>
                 </div>
             </div>
 
             <div class="col-sm-6">
                 <div class="shopping-item">
-                    <a href="carrinho.html">Carrinho - <span class="cart-amunt">R$100</span> <i class="fa fa-shopping-cart"></i> <span class="product-count">5</span></a>
+                    <a href="{{ path_for('site.cart') }}">Carrinho - <span class="cart-amunt">R$100</span> <i class="fa fa-shopping-cart"></i> <span class="product-count">5</span></a>
                 </div>
             </div>
         </div>
@@ -64,13 +64,13 @@
     <div class="navbar-menu" id="navbarSupportedContent">
         <ul class="navbar-start mr-auto">
             <li class="nav-item active">
-                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="{{ path_for('site.home') }}">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">Produtos</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Carrinho</a>
+                <a class="nav-link" href="{{ path_for('site.cart') }}">Carrinho</a>
             </li>
         </ul>
         <div class="field has-addons">
@@ -78,7 +78,7 @@
                 <input class="input" type="text" placeholder="Search">
             </div>
             <div class="control">
-                <a class="button is-info"> Search</a>
+                <a class="button is-info"> Pesquisar</a>
             </div>
         </div>
     </div>
