--- a/resources/views/site/category.twig
+++ b/resources/views/site/category.twig
@@ -1,5 +1,7 @@
 {% extends "layouts/base_site.twig" %}
 
+{% block title %}Hcode - Categoria{% endblock %}
+
 {% block content_site %}
 
 <div class="product-big-title-area">
