--- a/resources/views/site/product-detail.twig
+++ b/resources/views/site/product-detail.twig
@@ -1,5 +1,7 @@
 {% extends "layouts/base_site.twig" %}
 
+{% block title %}Hcode - Detalhes{% endblock %}
+
 {% block content_site %}
 
 <div class="product-big-title-area">
@@ -54,19 +56,23 @@
                                 <div role="tabpanel">
                                     <ul class="product-tab" role="tablist">
                                         <li role="presentation" class="active"><a href="#home" aria-controls="home" role="tab" data-toggle="tab">Descrição</a></li>
-                                        <li role="presentation"><a href="#profile" aria-controls="profile" role="tab" data-toggle="tab">Avaliações</a></li>
+                                        <li role="presentation"><a id="pills-review-tab" href="#profile" aria-controls="profile" role="tab" data-toggle="tab">Avaliações</a></li>
                                     </ul>
                                     <div class="tab-content">
                                         <div role="tabpanel" class="tab-pane fade show active" id="home">
                                             <h2>Descrição do Produto</h2>  
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam tristique, diam in consequat iaculis, est purus iaculis mauris, imperdiet facilisis ante ligula at nulla. Quisque volutpat nulla risus, id maximus ex aliquet ut. Suspendisse potenti. Nulla varius lectus id turpis dignissim porta. Quisque magna arcu, blandit quis felis vehicula, feugiat gravida diam. Nullam nec turpis ligula. Aliquam quis blandit elit, ac sodales nisl. Aliquam eget dolor eget elit malesuada aliquet. In varius lorem lorem, semper bibendum lectus lobortis ac.</p>
+                                            <p>
+                                                Mussum Ipsum, cacilds vidis litro abertis. Praesent malesuada urna nisi, quis volutpat erat hendrerit non.
+                                                Nam vulputate dapibus. Mauris nec dolor in eros commodo tempor.
+                                                Aenean aliquam molestie leo, vitae iaculis nisl. Suco de cevadiss, é um leite divinis, qui tem lupuliz, matis, aguis e fermentis.
+                                            </p>
                                                 <p>https://getbootstrap.com/docs/4.0/components/navs/?</p>
-                                            <p>Mauris placerat vitae lorem gravida viverra. Mauris in fringilla ex. Nulla facilisi. Etiam scelerisque tincidunt quam facilisis lobortis. In malesuada pulvinar neque a consectetur. Nunc aliquam gravida purus, non malesuada sem accumsan in. Morbi vel sodales libero.</p>
+                                            <p>Posuere libero varius. Nullam a nisl ut ante blandit hendrerit. Aenean sit amet nisi.</p>
                                         </div>
-                                        <div role="tabpanel" class="tab-pane fade" id="profile">
+                                        <div role="tabpanel" class="tab-pane fade" id="profile" aria-labelledby="pills-review-tab">
                                             <h2>Reviews</h2>
                                             <div class="submit-review">
-                                                <p><label for="name">Name</label> <input name="name" type="text"></p>
+                                                <p><label for="name">Nome</label> <input name="name" type="text"></p>
                                                 <p><label for="email">Email</label> <input name="email" type="email"></p>
                                                 <div class="rating-chooser">
                                                     <p>Your rating</p>
