--- a/resources/views/partials/site/navigation.twig
+++ b/resources/views/partials/site/navigation.twig
@@ -7,7 +7,12 @@
                         <li><a href="#"><i class="fa fa-user"></i> Minha Conta</a></li>
                         <li><a href="#"><i class="fa fa-heart"></i> Lista de Desejos</a></li>
                         <li><a href="#"><i class="fa fa-shopping-cart"></i> Meu Carrinho</a></li>
-                        <li><a href="#"><i class="fa fa-lock"></i> Login</a></li>
+                        {% if user > 0 %}
+                            <li><a href="{{ base_url() }}/site/profile"><i class="fa fa-user"></i> {{ user_name }}</a></li>
+                            <li><a href="{{ base_url() }}/site/logout"><i class="fa fa-close"></i> Sair</a></li>
+                        {% else %}
+                            <li><a href="{{ base_url() }}/site/login"><i class="fa fa-lock"></i> Login</a></li>
+                        {% endif %}
                     </ul>
                 </div>
             </div>
