--- a/public/css/bulma.css
+++ b/public/css/bulma.css
@@ -91,7 +91,7 @@ fieldset[disabled] .pagination-ellipsis {
   width: 0.625em;
 }
 
-.box:not(:last-child), .content:not(:last-child), .notification:not(:last-child), .progress:not(:last-child), .table:not(:last-child), .table-container:not(:last-child), .title:not(:last-child),
+.box:not(:last-child), .content:not(:last-child), .notification:not(:last-child), .progress:not(:last-child), .table-bulma:not(:last-child), .table-bulma-container:not(:last-child), .title:not(:last-child),
 .subtitle:not(:last-child), .block:not(:last-child), .highlight:not(:last-child), .breadcrumb:not(:last-child), .level:not(:last-child), .message:not(:last-child), .pagination:not(:last-child), .tabs:not(:last-child) {
   margin-bottom: 1.5rem;
 }
@@ -1879,7 +1879,7 @@ fieldset[disabled] .button {
   margin-right: 0.25rem;
 }
 
-.container {
+.container-bulma {
   flex-grow: 1;
   margin: 0 auto;
   position: relative;
@@ -2677,202 +2677,202 @@ div.icon-text {
   }
 }
 
-.table {
+.table-bulma {
   background-color: white;
   color: #363636;
 }
 
-.table td,
-.table th {
+.table-bulma td,
+.table-bulma th {
   border: 1px solid #dbdbdb;
   border-width: 0 0 1px;
   padding: 0.5em 0.75em;
   vertical-align: top;
 }
 
-.table td.is-white,
-.table th.is-white {
+.table-bulma td.is-white,
+.table-bulma th.is-white {
   background-color: white;
   border-color: white;
   color: #0a0a0a;
 }
 
-.table td.is-black,
-.table th.is-black {
+.table-bulma td.is-black,
+.table-bulma th.is-black {
   background-color: #0a0a0a;
   border-color: #0a0a0a;
   color: white;
 }
 
-.table td.is-light,
-.table th.is-light {
+.table-bulma td.is-light,
+.table-bulma th.is-light {
   background-color: whitesmoke;
   border-color: whitesmoke;
   color: rgba(0, 0, 0, 0.7);
 }
 
-.table td.is-dark,
-.table th.is-dark {
+.table-bulma td.is-dark,
+.table-bulma th.is-dark {
   background-color: #363636;
   border-color: #363636;
   color: #fff;
 }
 
-.table td.is-primary,
-.table th.is-primary {
+.table-bulma td.is-primary,
+.table-bulma th.is-primary {
   background-color: #00d1b2;
   border-color: #00d1b2;
   color: #fff;
 }
 
-.table td.is-link,
-.table th.is-link {
+.table-bulma td.is-link,
+.table-bulma th.is-link {
   background-color: #3273dc;
   border-color: #3273dc;
   color: #fff;
 }
 
-.table td.is-info,
-.table th.is-info {
+.table-bulma td.is-info,
+.table-bulma th.is-info {
   background-color: #3298dc;
   border-color: #3298dc;
   color: #fff;
 }
 
-.table td.is-success,
-.table th.is-success {
+.table-bulma td.is-success,
+.table-bulma th.is-success {
   background-color: #48c774;
   border-color: #48c774;
   color: #fff;
 }
 
-.table td.is-warning,
-.table th.is-warning {
+.table-bulma td.is-warning,
+.table-bulma th.is-warning {
   background-color: #ffdd57;
   border-color: #ffdd57;
   color: rgba(0, 0, 0, 0.7);
 }
 
-.table td.is-danger,
-.table th.is-danger {
+.table-bulma td.is-danger,
+.table-bulma th.is-danger {
   background-color: #f14668;
   border-color: #f14668;
   color: #fff;
 }
 
-.table td.is-narrow,
-.table th.is-narrow {
+.table-bulma td.is-narrow,
+.table-bulma th.is-narrow {
   white-space: nowrap;
   width: 1%;
 }
 
-.table td.is-selected,
-.table th.is-selected {
+.table-bulma td.is-selected,
+.table-bulma th.is-selected {
   background-color: #00d1b2;
   color: #fff;
 }
 
-.table td.is-selected a,
-.table td.is-selected strong,
-.table th.is-selected a,
-.table th.is-selected strong {
+.table-bulma td.is-selected a,
+.table-bulma td.is-selected strong,
+.table-bulma th.is-selected a,
+.table-bulma th.is-selected strong {
   color: currentColor;
 }
 
-.table td.is-vcentered,
-.table th.is-vcentered {
+.table-bulma td.is-vcentered,
+.table-bulma th.is-vcentered {
   vertical-align: middle;
 }
 
-.table th {
+.table-bulma th {
   color: #363636;
 }
 
-.table th:not([align]) {
+.table-bulma th:not([align]) {
   text-align: inherit;
 }
 
-.table tr.is-selected {
+.table-bulma tr.is-selected {
   background-color: #00d1b2;
   color: #fff;
 }
 
-.table tr.is-selected a,
-.table tr.is-selected strong {
+.table-bulma tr.is-selected a,
+.table-bulma tr.is-selected strong {
   color: currentColor;
 }
 
-.table tr.is-selected td,
-.table tr.is-selected th {
+.table-bulma tr.is-selected td,
+.table-bulma tr.is-selected th {
   border-color: #fff;
   color: currentColor;
 }
 
-.table thead {
+.table-bulma thead {
   background-color: transparent;
 }
 
-.table thead td,
-.table thead th {
+.table-bulma thead td,
+.table-bulma thead th {
   border-width: 0 0 2px;
   color: #363636;
 }
 
-.table tfoot {
+.table-bulma tfoot {
   background-color: transparent;
 }
 
-.table tfoot td,
-.table tfoot th {
+.table-bulma tfoot td,
+.table-bulma tfoot th {
   border-width: 2px 0 0;
   color: #363636;
 }
 
-.table tbody {
+.table-bulma tbody {
   background-color: transparent;
 }
 
-.table tbody tr:last-child td,
-.table tbody tr:last-child th {
+.table-bulma tbody tr:last-child td,
+.table-bulma tbody tr:last-child th {
   border-bottom-width: 0;
 }
 
-.table.is-bordered td,
-.table.is-bordered th {
+.table-bulma.is-bordered td,
+.table-bulma.is-bordered th {
   border-width: 1px;
 }
 
-.table.is-bordered tr:last-child td,
-.table.is-bordered tr:last-child th {
+.table-bulma.is-bordered tr:last-child td,
+.table-bulma.is-bordered tr:last-child th {
   border-bottom-width: 1px;
 }
 
-.table.is-fullwidth {
+.table-bulma.is-fullwidth {
   width: 100%;
 }
 
-.table.is-hoverable tbody tr:not(.is-selected):hover {
+.table-bulma.is-hoverable tbody tr:not(.is-selected):hover {
   background-color: #fafafa;
 }
 
-.table.is-hoverable.is-striped tbody tr:not(.is-selected):hover {
+.table-bulma.is-hoverable.is-striped tbody tr:not(.is-selected):hover {
   background-color: #fafafa;
 }
 
-.table.is-hoverable.is-striped tbody tr:not(.is-selected):hover:nth-child(even) {
+.table-bulma.is-hoverable.is-striped tbody tr:not(.is-selected):hover:nth-child(even) {
   background-color: whitesmoke;
 }
 
-.table.is-narrow td,
-.table.is-narrow th {
+.table-bulma.is-narrow td,
+.table-bulma.is-narrow th {
   padding: 0.25em 0.5em;
 }
 
-.table.is-striped tbody tr:not(.is-selected):nth-child(even) {
+.table-bulma.is-striped tbody tr:not(.is-selected):nth-child(even) {
   background-color: #fafafa;
 }
 
-.table-container {
+.table-bulma-container {
   -webkit-overflow-scrolling: touch;
   overflow: auto;
   overflow-y: hidden;
@@ -4648,7 +4648,7 @@ fieldset[disabled] .select select:hover {
   content: "\0227B";
 }
 
-.card {
+.card-bulma {
   background-color: white;
   border-radius: 0.25rem;
   box-shadow: 0 0.5em 1em -0.125em rgba(10, 10, 10, 0.1), 0 0px 0 1px rgba(10, 10, 10, 0.02);
