--- a/resources/views/mails/forgot.twig
+++ b/resources/views/mails/forgot.twig
@@ -1,5 +1,12 @@
-  <p>Olá, </p>
+  <p>Olá, {{ name }}</p>
 
+  <br>
+
+  <p>Link para recupera senha: <a href="{{ link }}{{ code }}">link</a></p>
+
+  <br>
+
+  <button class="button is-primary">Teste</button>
   <p>
     Suíno Master.
   </p>
